# vscp-demo-pico-wiznet-tcpiplinksrv

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  callbacks-link.c  callbacks-vscp-protocol.c  demo.c  demo.h  fifo.h  pico-eeprom.c  test-fifo.c  vscp-fifo.c  vscp-fifo.h  vscp-projdefs.h
.github/workflows/: build.yml
docs/: README.md  index.html
firmware/: CMakeLists.txt
firmware/src/: callbacks-link.c  demo.c  demo.h  pico-eeprom.h
